[package]
name = "simd_asm_code_visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.25.0", features = [] }
cpulib = { path = "libs/cpulib" }
egui_code_editor = { path = "libs/egui_code_editor" }
lazy_static = "1.4"